create mongoose connection

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,13 +3,13 @@
     <title>Habit Tracker <%= title%> Page</title>
   </head>
   <body>
-    <p><%= title%></p>
+    <header><p><%= title%></p></header>
     <div>
       <form action="">
         <input type="text" />
-        <input type="date" />
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Add" />
       </form>
     </div>
+    <footer></footer>
   </body>
 </html>
