--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,10 @@
         />
         <input type="submit" value="Add Habit" />
       </form>
+      
+    </div>
+    <div>
+      <a href="/update-status/?id="></a>
     </div>
     <footer></footer>
   </body>
