--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,13 +17,25 @@
     </div>
     <div>
       <%response.forEach((item)=>{%>
+      <br />
       <p><%= item.content%></p>
+      <p>Completed Days :<%= item.days%></p>
+      <% let today_date = new Date(); let created_date = item.createdAt; let
+      difference_B_W_dates = today_date - created_date; let total_days =
+      difference_B_W_dates/ (1000 * 3600 * 24); let total_roundOFF_days =
+      parseInt(total_days, 10); %> <%if(total_roundOFF_days<7) {%>
+      <p>7</p>
+      <%}else {%>
+      <p><%=total_roundOFF_days%></p>
+      <%}%>
+
+      <a href="/remove-habit/?id=<%= item._id%>">Remove</a>
       <%days.forEach((day)=>{ let found = false, status = "";
       item.dates.find(function (res){ if(res.date === day.date){ found = true;
       status = res.complete; } }) %>
 
-      <hr />
       <p><%= day.date%></p>
+      <hr />
       <a href="/update-status/?id=<%= item._id%>&date=<%=day.date%>"
         ><%if(found && status === "yes"){%>
         <p>yes</p>
