--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <title>Habit Tracker Login</title>
+    <link rel="stylesheet" href="../assets/css/login.css" type="text/css" />
   </head>
-  <body>
-    <form action="/login" method="GET">
-      <button>login</button>
-    </form>
+  <body class="login">
+    <div class="heading_container">
+      <h1 class="display-1">Welcome To Habit Tracker App</h1>
+    </div>
+    <div class="form_container">
+      <form action="/login" method="GET">
+        <h6 class="display-6">Click Login Button To login as Default User</h6>
+        <div class="d-grid gap-2 d-md-block">
+          <button class="btn btn-primary">login</button>
+        </div>
+      </form>
+    </div>
   </body>
 </html>
