--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,8 +20,8 @@
     <div class="form_container">
       <form action="/login" method="GET">
         <h6 class="display-6">Click Login Button To login as Default User</h6>
-        <div class="d-grid gap-2 d-md-block">
-          <button class="btn btn-primary">login</button>
+        <div class="btn_container">
+          <button class="btn btn-outline-dark" id="btn">Login Me</button>
         </div>
       </form>
     </div>
