--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,53 +1,68 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Habit Tracker Page</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <title>Habit Tracker App</title>
+    <link rel="stylesheet" href="../assets/css/home.css" />
   </head>
   <body>
-    <%- include('./_header.ejs')%>
-    <form action="handle-view" method="POST">
-      <%if(user[0].View === "daily"){%>
-      <button disabled type="submit">Daily</button>
-      <button type="submit">Weely</button>
-      <%}else {%>
-      <button type="submit">Daily</button>
-      <button type="submit" disabled>Weely</button>
-      <p>no</p>
-      <%}%>
-    </form>
-    <div>
-      <p><%=user[0].View%></p>
-      <%habit.forEach((item)=>{%>
-      <br />
-      <p><%= item.content%></p>
-      <%if(user[0].View === "daily"){%>
-      <p>Completed Days :<%= item.days%></p>
-      <% let today_date = new Date(); let created_date = item.createdAt; let
-      difference_B_W_dates = today_date - created_date; let total_days =
-      difference_B_W_dates/ (1000 * 3600 * 24); let total_roundOFF_days =
-      parseInt(total_days, 10); %> <%if(total_roundOFF_days<7) {%>
-      <p>7</p>
-      <%}else {%>
-      <p><%=total_roundOFF_days%></p>
-      <%}%> <%}else {%>
-      <a href="/remove-habit/?id=<%= item._id%>">Remove</a>
-      <% days.forEach((day)=>{ let found = false, status = "";
-      item.dates.find(function (res){ if(res.date === day.date){ found = true;
-      status = res.complete; } }) %>
-
-      <p><%= day.date%></p>
-      <hr />
-      <a href="/update-status/?id=<%= item._id%>&date=<%=day.date%>"
-        ><%if(found && status === "yes"){%>
-        <p>yes</p>
-        <%} else if(found && status==="no") {%>
-        <p>no</p>
+    <nav class="navbar navbar-dark bg-dark" id="nav_bar">
+      <h2 class="navbar_heading">Habit Tracker App</h2>
+    </nav>
+    <div class="home_container">
+      <%- include('./_header.ejs')%>
+      <form action="handle-view" method="POST" class="home_form">
+        <%if(user[0].View === "daily"){%>
+        <button disabled type="submit">Daily</button>
+        <button type="submit">Weely</button>
         <%}else {%>
-        <p>none</p>
+        <button type="submit">Daily</button>
+        <button type="submit" disabled>Weely</button>
+        <p>no</p>
         <%}%>
-      </a>
-      <p><%= day.day%></p>
-      <%})%> <%}%> <%})%>
+      </form>
+      <div>
+        <p><%=user[0].View%></p>
+        <%habit.forEach((item)=>{%>
+        <br />
+        <p><%= item.content%></p>
+        <%if(user[0].View === "daily"){%>
+        <p>Completed Days :<%= item.days%></p>
+        <% let today_date = new Date(); let created_date = item.createdAt; let
+        difference_B_W_dates = today_date - created_date; let total_days =
+        difference_B_W_dates/ (1000 * 3600 * 24); let total_roundOFF_days =
+        parseInt(total_days, 10); %> <%if(total_roundOFF_days<7) {%>
+        <p>7</p>
+        <%}else {%>
+        <p><%=total_roundOFF_days%></p>
+        <%}%> <%}else {%>
+        <a href="/remove-habit/?id=<%= item._id%>">Remove</a>
+        <% days.forEach((day)=>{ let found = false, status = "";
+        item.dates.find(function (res){ if(res.date === day.date){ found = true;
+        status = res.complete; } }) %>
+
+        <p><%= day.date%></p>
+        <hr />
+        <a href="/update-status/?id=<%= item._id%>&date=<%=day.date%>"
+          ><%if(found && status === "yes"){%>
+          <p>yes</p>
+          <%} else if(found && status==="no") {%>
+          <p>no</p>
+          <%}else {%>
+          <p>none</p>
+          <%}%>
+        </a>
+        <p><%= day.day%></p>
+        <%})%> <%}%> <%})%>
+      </div>
     </div>
-    <footer></footer>
   </body>
 </html>
