--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -11,7 +11,7 @@
 }
 
 .new_habit_form {
-  width: 50vw;
+  width: 64vw;
   display: flex;
   justify-content: space-between;
   margin-top: 0.5rem;
@@ -24,6 +24,55 @@
 }
 
 /* dispaly container */
-.display_container{
-  
+.display_container {
+  flex-direction: column;
+  width: 50vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home_form{
+  display: flex;
+  flex-direction: row;
+}
+.home_form button {
+  width: 28rem;
+}
+.list_container {
+  /* width: 900px; */
+  margin-top: 1rem;
+}
+.item_container {
+ width: 900px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    border: 1px solid;
+    padding: 0.5rem;
+    font-size: inherit;
+    text-transform: uppercase;
+    margin: 0;
+    border-radius: 0.5rem;
+    margin-top: 0.5rem;
+}
+}
+.item_container p {
+  margin: 0;
+}
+.dates_container {
+  display: flex;
+}
+.days_container {
+  display: flex;
+  flex-direction: row;
+}
+.action_container {
+     font-size: medium;
+    width: 82px;
+    display: flex;
+    justify-content: space-between;
+    /* width: 32vw; */
+    flex-direction: column;
+    margin: 0 15px;
+}
 }
