--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,5 @@
 <div>
+  <!-- add new habit form -->
   <form action="/new-habit" method="POST" class="new_habit_form">
     <div class="form-floating mb-3" id="input_container">
       <input
