--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- boot strap css cdn -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,6 +18,7 @@
     <div class="heading_container">
       <h1 class="display-1">Welcome To Habit Tracker App</h1>
     </div>
+    <!-- form to login  -->
     <div class="form_container">
       <form action="/login" method="GET">
         <h6 class="display-6">Click Login Button To login as Default User</h6>
